<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/backArrowTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_back_arrow"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/loginTitleTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/log_in_title"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/backArrowTxtView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/emailEditTxtView"
        style="@style/edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/email"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@id/gdStart"
        app:layout_constraintTop_toBottomOf="@id/loginTitleTxtView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordEditTxtView"
        style="@style/edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@id/gdStart"
        app:layout_constraintTop_toBottomOf="@id/emailEditTxtView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/loginBtnCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTxtView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>