<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterSecondFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gdEnd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="16dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/backArrowTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:background="@drawable/ic_back_arrow"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/registerTitleTxtView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/comfortaa"
        android:text="@string/register_txt"
        android:textColor="@color/black"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/backArrowTxtView" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usernameEditTxtView"
        style="@style/edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/username"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@id/gdStart"
        app:layout_constraintTop_toBottomOf="@id/registerTitleTxtView" />

    <androidx.cardview.widget.CardView
        android:id="@+id/signUpBtnCardView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/usernameEditTxtView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white" />
    </androidx.cardview.widget.CardView>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/termsOfServiceTxtView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:maxLines="2"
        android:text="@string/by_signing_up_you_agree_to_photos_terms_of_service_and_nprivacy_policy"
        android:textColor="@color/black"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@id/gdEnd"
        app:layout_constraintStart_toStartOf="@+id/gdStart"
        app:layout_constraintTop_toBottomOf="@+id/signUpBtnCardView" />

</androidx.constraintlayout.widget.ConstraintLayout>